# seeed_armbian_extension

./: README.md  build-compat.sh  seeed_armbian_extension.sh  test.sh
.github/workflows/: build-and-publish.yml
FCS960K-aic-bluz/: .gitignore  README
FCS960K-aic-bluz/.github/local/: Makefile.local  rules.local
FCS960K-aic-bluz/debian/: changelog  common-lintian-overrides  control  copyright  fcs960k-aic-bluez-lib.install  fcs960k-aic-bluez.install  not-installed  rules
FCS960K-aic-bluz/tools/: hciattach.c
armbian-ota/: README.md  ota-support.sh
armbian-ota/ab_ota/systemd/: armbian-ota-firstboot.service  (+2 more)
armbian-ota/recovery_ota/: armbian-ota-manager  back-list.txt  start_prepare_ota.sh
armbian-ota/runtime/: armbian-ota  backend-ab.sh  backend-recovery.sh  common.sh
camera_engine_rkaiq/: CMakeLists.txt  build-deb.sh
camera_engine_rkaiq/debian/: camera-engine-rkaiq-@SOC@.postinst.in  camera-engine-rkaiq-@SOC@.prerm.in  changelog.in  control.in  rkaiq_3A.service  rules.in
camera_engine_rkaiq/rkaiq/: CMakeLists.txt
camera_engine_rkaiq/rkaiq/algos/af/: CMakeLists.txt
hostapd_morse_tools/: Makefile
hostapd_morse_tools/debian/: changelog  control  hostapd-morse-tools.install  rules
hostapd_morse_tools/hostapd/: config_file.c  ctrl_iface.c  defconfig  hostapd_cli.c  hostapd_s1g.conf  main.c
morsectrl_tools/debian/: rules
realtek-r8125-dkms/: dkms.conf
rk35xx_usb_gadget/: README.md  build-usbdevice-deb.sh
rk_secure-disk-encryption/: rk-auto-decryption-disk.sh  rk-cryptroot-verbosity.sh  rk-secure-boot.sh
rk_secure-disk-encryption/auto-decryption-config/: decryption-disk.sh
rk_secure-disk-encryption/secure-boot-config/: 0001-enable-gen_bl32_node.patch  fit_kernel.its
scripts/: build-all-debs.sh  publish-aptly.sh
security-hardening/: recomputer-security.sh
(+18 files in other folders)
